// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledSection can change the heading level 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h4
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-file-text c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1596 380q28 28 48 76t20 88v1152q0 40-28 68t-68 28h-1344q-40 0-68-28t-28-68v-1600q0-40 28-68t68-28h896q40 0 88 20t76 48zm-444-244v376h376q-10-29-22-41l-313-313q-12-12-41-22zm384 1528v-1024h-416q-40 0-68-28t-28-68v-416h-768v1536h1280zm-1024-864q0-14 9-23t23-9h704q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64zm736 224q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h704zm0 256q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h704z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h4>
  <p>
    Keyword Suggestions
  </p>
  <p>
    Hello, this is additional content
  </p>
</section>
`;

exports[`StyledSection can change the icon to angle-down 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-angle-down c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    angle-down
  </p>
</section>
`;

exports[`StyledSection can change the icon to angle-left 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-angle-left c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1203 544q0 13-10 23l-393 393 393 393q10 10 10 23t-10 23l-50 50q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l50 50q10 10 10 23z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    angle-left
  </p>
</section>
`;

exports[`StyledSection can change the icon to angle-right 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-angle-right c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1171 960q0 13-10 23l-466 466q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l393-393-393-393q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l466 466q10 10 10 23z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    angle-right
  </p>
</section>
`;

exports[`StyledSection can change the icon to angle-up 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-angle-up c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    angle-up
  </p>
</section>
`;

exports[`StyledSection can change the icon to circle 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-circle c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    circle
  </p>
</section>
`;

exports[`StyledSection can change the icon to edit 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-edit c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M491 1536l91-91-235-235-91 91v107h128v128h107zm523-928q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zm-54-192l416 416-832 832h-416v-416zm683 96q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    edit
  </p>
</section>
`;

exports[`StyledSection can change the icon to eye 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-eye c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    eye
  </p>
</section>
`;

exports[`StyledSection can change the icon to file-text 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-file-text c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1596 380q28 28 48 76t20 88v1152q0 40-28 68t-68 28h-1344q-40 0-68-28t-28-68v-1600q0-40 28-68t68-28h896q40 0 88 20t76 48zm-444-244v376h376q-10-29-22-41l-313-313q-12-12-41-22zm384 1528v-1024h-416q-40 0-68-28t-28-68v-416h-768v1536h1280zm-1024-864q0-14 9-23t23-9h704q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64zm736 224q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h704zm0 256q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h704z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    file-text
  </p>
</section>
`;

exports[`StyledSection can change the icon to key 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-key c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M832 512q0-80-56-136t-136-56-136 56-56 136q0 42 19 83-41-19-83-19-80 0-136 56t-56 136 56 136 136 56 136-56 56-136q0-42-19-83 41 19 83 19 80 0 136-56t56-136zm851 704q0 17-49 66t-66 49q-9 0-28.5-16t-36.5-33-38.5-40-24.5-26l-96 96 220 220q28 28 28 68 0 42-39 81t-81 39q-40 0-68-28l-671-671q-176 131-365 131-163 0-265.5-102.5t-102.5-265.5q0-160 95-313t248-248 313-95q163 0 265.5 102.5t102.5 265.5q0 189-131 365l355 355 96-96q-3-3-26-24.5t-40-38.5-33-36.5-16-28.5q0-17 49-66t66-49q13 0 23 10 6 6 46 44.5t82 79.5 86.5 86 73 78 28.5 41z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    key
  </p>
</section>
`;

exports[`StyledSection can change the icon to list 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-list c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M384 1408q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm0-512q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm-1408-928q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    list
  </p>
</section>
`;

exports[`StyledSection can change the icon to question-circle 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-question-circle c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1024 1376v-192q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v192q0 14 9 23t23 9h192q14 0 23-9t9-23zm256-672q0-88-55.5-163t-138.5-116-170-41q-243 0-371 213-15 24 8 42l132 100q7 6 19 6 16 0 25-12 53-68 86-92 34-24 86-24 48 0 85.5 26t37.5 59q0 38-20 61t-68 45q-63 28-115.5 86.5t-52.5 125.5v36q0 14 9 23t23 9h192q14 0 23-9t9-23q0-19 21.5-49.5t54.5-49.5q32-18 49-28.5t46-35 44.5-48 28-60.5 12.5-81zm384 192q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    question-circle
  </p>
</section>
`;

exports[`StyledSection can change the icon to search 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-search c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1216 832q0-185-131.5-316.5t-316.5-131.5-316.5 131.5-131.5 316.5 131.5 316.5 316.5 131.5 316.5-131.5 131.5-316.5zm512 832q0 52-38 90t-90 38q-54 0-90-38l-343-342q-179 124-399 124-143 0-273.5-55.5t-225-150-150-225-55.5-273.5 55.5-273.5 150-225 225-150 273.5-55.5 273.5 55.5 225 150 150 225 55.5 273.5q0 220-124 399l343 343q37 37 37 90z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    search
  </p>
</section>
`;

exports[`StyledSection can change the icon to times 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-times c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Icon 
    times
  </p>
</section>
`;

exports[`StyledSection have a red icon 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-search c3 c4"
      fill="red"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1216 832q0-185-131.5-316.5t-316.5-131.5-316.5 131.5-131.5 316.5 131.5 316.5 316.5 131.5 316.5-131.5 131.5-316.5zm512 832q0 52-38 90t-90 38q-54 0-90-38l-343-342q-179 124-399 124-143 0-273.5-55.5t-225-150-150-225-55.5-273.5 55.5-273.5 150-225 225-150 273.5-55.5 273.5 55.5 225 150 150 225 55.5 273.5q0 220-124 399l343 343q37 37 37 90z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Color red
  </p>
</section>
`;

exports[`StyledSection match the snapshot 1`] = `
.c2 {
  margin-left: 0;
  padding: 0;
}

.c0 {
  box-shadow: 0 1px 2px rgba( 0,0,0,0.2 );
  background-color: #fff;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.c0 *,
.c0 {
  box-sizing: border-box;
}

.c0 *:before,
.c0:before,
.c0 *:after,
.c0:after {
  box-sizing: border-box;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 0 0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0 0 16px;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: red;
}

.c0 .c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 8px;
}

.c4 {
  width: 16;
  height: 16;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<section
  className="yoast-section c0"
>
  <h2
    className="c1 c2"
  >
    <svg
      aria-hidden={true}
      className="yoast-svg-icon yoast-svg-icon-file-text c3 c4"
      fill="blue"
      focusable="false"
      role="img"
      size="16"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1596 380q28 28 48 76t20 88v1152q0 40-28 68t-68 28h-1344q-40 0-68-28t-28-68v-1600q0-40 28-68t68-28h896q40 0 88 20t76 48zm-444-244v376h376q-10-29-22-41l-313-313q-12-12-41-22zm384 1528v-1024h-416q-40 0-68-28t-28-68v-416h-768v1536h1280zm-1024-864q0-14 9-23t23-9h704q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64zm736 224q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h704zm0 256q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h704z"
      />
    </svg>
    Insights. Hello, this is a Styled Section heading.
  </h2>
  <p>
    Keyword Suggestions
  </p>
  <p>
    Hello, this is additional content
  </p>
</section>
`;
